--- a/content/guides/higher-order-functions.adoc
+++ b/content/guides/higher-order-functions.adoc
@@ -153,7 +153,7 @@ First, let's look at a normal for loop.
 
 [source, clojure]
 ----
-(defn filter-dogs [pets]
+(defn loop-dogs [pets]
     (loop [pets pets
            dogs []]
         (if (first pets)
@@ -174,3 +174,11 @@ We can simplpify this using `filter`, a higher order function.
 ----
 
 The solution using `filter` is much clearer and allows us to show intent rather than just give commands.
+We can break this into even smaller pieces by breaking the filtering function out into a separate `var`.
+
+[source, clojure]
+----
+(defn dog? [pet] (= :dog (:type pet)))
+
+(defn filter-dogs [pets] (filter dog? pets))
+----
