typo in file metadata

--- a/content/guides/higher-order-functions.adoc
+++ b/content/guides/higher-order-functions.adoc
@@ -2,7 +2,7 @@
 Michael Zavarella
 2017-09-15
 :jbake-type: guides
-:toc macro
+:toc: macro
 :icons: font
 
 ifdef::env-github,env-browser[:outfilesuffic: .adoc]
