--- a/content/events/2017/clojureconj.adoc
+++ b/content/events/2017/clojureconj.adoc
@@ -4,7 +4,7 @@ Cognitect
 :jbake-type: event
 :jbake-edition: 2017
 :jbake-link: http://2017.clojure-conj.org
-:jbake-location: Austin, TX
+:jbake-location: Baltimore, MD 
 :jbake-start: 2017-10-12
 :jbake-end: 2017-10-14
 
