update clojured event page

--- a/content/events/2018/clojured.adoc
+++ b/content/events/2018/clojured.adoc
@@ -8,6 +8,8 @@ clojureD
 :jbake-start: 2018-02-24
 :jbake-end: 2018-02-24
 
-:clojureD is an independent non-profit conference from the Clojure community for the Clojure community. Focus points will be interesting developments and ideas in the global Clojure community as well as introductory-level talks highlighting the fun aspects of learning and messing with Clojure. Besides a day of interesting talks :clojureD will be an opportunity to meet the German & European Clojure community and share a good time together.
+The developer conference :clojureD premiered in 2015 and quickly evolved to the biggest annual Clojure conference in Germany. Software developers from all over the world meet in Berlin to share new, amazing and mind-blowing ideas and techniques. Besides a day of interesting talks :clojureD will be an opportunity to meet the German & European Clojure community and share a good time together.
 
-The conference will be held in English.
+The Call for Proposals is on from 01. September to 31. October, Ticket Sale started 1. October.
+
+We hope to see you in Berlin for another great an inspiring :clojureD conference!
