--- a/content/guides/learn/hashed_colls.adoc
+++ b/content/guides/learn/hashed_colls.adoc
@@ -7,6 +7,8 @@ Alex Miller
 :navlinktext: Hashed Collections
 :prevpagehref: sequential_colls
 :prevpagetitle: Sequential Collections 
+:nextpagehref: flow
+:nextpagetitle: Flow Control
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
