--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -24,10 +24,9 @@ This will bring up a read-eval-print loop (REPL).
 
 == Try Clojure Online
 
-These sites provide browser-based Clojure repls for interactive exploration:
+This site provides a browser-based Clojure repl for interactive exploration:
 
 * https://repl.it/languages/clojure[repl.it]
-* http://tryclj.com/[TryClojure]
 
 == Leiningen
 
